--- a/css/style.css
+++ b/css/style.css
@@ -11,11 +11,11 @@ body {
 .login-bg{
 	width: 100%;
 	height: 100%;
-	background: -webkit-linear-gradient(-65deg,#8101a1,#d3006d,  #e01900,  #e67500) fixed; /* Safari 5.1 - 6.0 */
+	background: -webkit-linear-gradient(0deg, #00d7cd , #08fa7f) fixed; /* Safari 5.1 - 6.0 */
 	background: -o-linear-gradient(-65deg,#8101a1,#d3006d, #e01900,  #e67500) fixed; /* Opera 11.1 - 12.0 */
 	background: -moz-linear-gradient(-65deg, #8101a1,#d3006d,#e01900,  #e67500 ) fixed; /* Firefox 3.6 - 15 */
 	background: linear-gradient(to -65deg,#8101a1,#d3006d, #e01900, #e67500) fixed; /* 标准的语法 */
-	/*background: -webkit-linear-gradient(-65deg,#ce2e2e, #e67500); 
+	/*background: -webkit-linear-gradient(0deg, #00d7cd , #08fa7f); 
 	background: -o-linear-gradient(-65deg,#ce2e2e, #e67500); 
 	background: -moz-linear-gradient(-65deg,#ce2e2e, #e67500); 
 	background: linear-gradient(to -65deg,#ce2e2e, #e67500);*/
